project(diffuse)
cmake_minimum_required(VERSION 3.1)
FIND_PACKAGE( Boost 1.40 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
add_executable(simulate "simulate_fixedsize.cpp" )
TARGET_LINK_LIBRARIES(simulate ${Boost_LIBRARIES})
set_target_properties(simulate PROPERTIES CXX_STANDARD 14)
target_link_libraries(simulate openbabel)
target_link_libraries(simulate fftw3)
add_executable(probability "probability.cpp" )
TARGET_LINK_LIBRARIES(probability ${Boost_LIBRARIES})
set_target_properties(probability PROPERTIES CXX_STANDARD 14)
target_link_libraries(probability openbabel)
target_link_libraries(probability fftw3)
INCLUDE_DIRECTORIES ( "~/src/wmath" )
INCLUDE_DIRECTORIES ( "~/src/asu3" )
INCLUDE_DIRECTORIES ( "/usr/include/eigen3/" )
include_directories ( "~/src/")
# include_directories ( "~/src/openbabel-2.4.1/include/" )
include_directories ( "/usr/include/openbabel-2.0/" )
aux_source_directory(. SRC_LIST)
add_library(asu SHARED IMPORTED)
add_library(wmath SHARED IMPORTED)
SET_TARGET_PROPERTIES(asu PROPERTIES LINKER_LANGUAGE CXX  CXX_STANDARD 14)
SET_TARGET_PROPERTIES(wmath PROPERTIES LINKER_LANGUAGE CXX CXX_STANDARD 14)
SET(GCC_COVERAGE_COMPILE_FLAGS "${GCC_COVERAGE_COMPILE_FLAGS} -std=c++14 -mpclmul -lboost_system -lboost_thread -pthread  -fext-numeric-literals -march=native")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS} -std=c++14 -lboost_system -lboost_thread -pthread -fext-numeric-literals -O3 -Wfatal-errors" )
